--- a/pom.xml
+++ b/pom.xml
@@ -81,5 +81,12 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.9.9</version>
+		</dependency>
+
 	</dependencies>
 </project>
