--- a/.classpath
+++ b/.classpath
@@ -46,5 +46,7 @@
 	<classpathentry kind="lib" path="/Users/siddharth/Documents/workspace/selenium-2.53.1/selenium-java-2.53.1-srcs.jar"/>
 	<classpathentry kind="lib" path="/Users/siddharth/Documents/workspace/selenium-2.53.1/selenium-java-2.53.1.jar"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="lib" path="/Users/siddharth/Downloads/json-lib-2.4-jdk15.jar"/>
+	<classpathentry kind="lib" path="/Users/siddharth/Downloads/java-json.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
